Retouched CSS Styles

--- a/templates/browse-by-person.html
+++ b/templates/browse-by-person.html
@@ -56,8 +56,6 @@
 				</div>
 				<div class="story-meta">
 					<ul>
-						<!-- agregar sprint -->
-						<!-- agregar estado -->
 						<li class="number"><a href="single-story.html">117</a></li>
 					</ul>
 				</div>
@@ -81,12 +79,10 @@
 				</div>
 				
 				<div class="story-status">
-					<span class="rejected">Rejected</span>
+					<span class="accepted">Accepted</span>
 				</div>
 				<div class="story-meta">
 					<ul>
-						<!-- agregar sprint -->
-						<!-- agregar estado -->
 						<li class="number"><a href="single-story.html">117</a></li>
 					</ul>
 				</div>
