--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,8 @@
 
 <div id="session">
 	<ul>
-		<li><a href="upgrade.html" class="ok">&laquo; upgrade your account</a> (you are using 90% of your available space)</li>
+		<li>Claris</li>
+		<!-- <li><a href="upgrade.html" class="ok">upgrade your account</a> (you are using 90% of your available space)</li> -->
 		<li><a href="logout.html">logout</a></li>
 		<li><a href="project-settings.html">project settings</a></li>
 		<li><a href="people.html">people</a></li>
@@ -25,10 +26,10 @@
 	
 	<div id="nav">
 		<ul>
-			<li><a href="dashboard.html" class="active">Dashboard</a></li>
-			<li><a href="browse.html">Browse</a></li>
-			<li><a href="messages.html">Messages</a></li>
-			<li><a href="metrics.html">Metrics</a></li>
+			<li><a href="dashboard.html" class="dashboard active">Dashboard</a></li>
+			<li><a href="browse.html" class="browse">Browse</a></li>
+			<li><a href="messages.html" class="messages">Messages</a></li>
+			<li><a href="metrics.html" class="metrics">Metrics</a></li>
 		</ul>
 	</div>
 	
@@ -49,7 +50,7 @@
 							<input type="text" name="some_name" value="" id="some_name" />
 						</td>
 						<td>
-							<input type="submit" name="some_name" value="Add story" id="some_name" class="submit" />
+							<a href="" class="button">Add story</a>
 						</td>
 					</tr>
 					<tr>
@@ -63,8 +64,7 @@
 			<div class="col span-6">
 				<div class="module">
 					<div class="module-header">
-						<h3>In Progress<br /><small>This Sprint</small>
-						</h3>
+						<h3>In Progress <small>(this sprint)</small></h3>
 					</div>
 					
 					<div class="story">
@@ -91,7 +91,6 @@
 						<div class="story-meta">
 							<ul>
 								<li class="number"><a href="">324</a></li>
-								<!-- <li><a href="">Accept</a></li> -->
 							</ul>
 						</div>
 						
@@ -155,7 +154,7 @@
 			<div class="col span-3">
 				<div class="module">
 					<div class="module-header">
-						<h3>To-do<br /><small>Product Backlog</small></h3>
+						<h3>To-do <small>(product backlog)</small></h3>
 					</div>
 					
 					<div class="story">
@@ -204,7 +203,6 @@
 						<div class="story-meta col last span-1">
 							<ul>
 								<li class="number"><a href="">3</a></li>
-								<!-- <li><a href="">Accept</a></li> -->
 							</ul>
 						</div>
 						
@@ -226,14 +224,13 @@
 			<div class="col last span-3">
 				<div class="module">
 					<div class="module-header">
-						<h3>Unplanned <br /><br /></h3>
+						<h3>Unplanned Stories</h3>
 					</div>
 					
 					<div class="story">
 						<div class="story-meta col last span-1">
 							<ul>
 								<li class="number"><a href="">3</a></li>
-								<!-- <li><a href="">Accept</a></li> -->
 							</ul>
 						</div>
 						
