--- a/templates/messages.html
+++ b/templates/messages.html
@@ -25,10 +25,10 @@
 	
 	<div id="nav">
 		<ul>
-			<li><a href="dashboard.html">Dashboard</a></li>
-			<li><a href="browse.html">Browse</a></li>
-			<li><a href="messages.html" class="active">Messages</a></li>
-			<li><a href="metrics.html">Metrics</a></li>
+			<li><a href="dashboard.html" class="dashboard">Dashboard</a></li>
+			<li><a href="browse.html" class="browse">Browse</a></li>
+			<li><a href="messages.html" class="messages active">Messages</a></li>
+			<li><a href="metrics.html" class="metrics">Metrics</a></li>
 		</ul>
 	</div>
 	
@@ -36,6 +36,9 @@
 		<div id="page-header">
 			<div class="col span-8">
 				<h2>Messages</h2>
+				<ul>
+					<li><a href="">Export as RTF</a></li>
+				</ul>
 			</div>
 		</div>
 		
