--- a/templates/metrics.html
+++ b/templates/metrics.html
@@ -26,20 +26,19 @@
 	<div id="nav">
 		<ul>
 			<li><a href="dashboard.html" class="dashboard">Dashboard</a></li>
-			<li><a href="browse.html" class="browse active">Browse</a></li>
+			<li><a href="browse.html" class="browse">Browse</a></li>
 			<li><a href="messages.html" class="messages">Messages</a></li>
-			<li><a href="metrics.html" class="metrics">Metrics</a></li>
+			<li><a href="metrics.html" class="active metrics">Metrics</a></li>
 		</ul>
 	</div>
 	
 	<div id="inner-wrapper">
 		<div id="page-header">
 			<div class="col span-8">
-				<h2>Browse</h2>
+				<h2>Metrics</h2>
 			
 				<ul>
-					<li><a href="">Daily scrums</a></li>
-					<li><a href="">Previous Sprints</a></li>
+					<li><a href="">Burndown chart</a></li>
 				</ul>
 			</div>
 			
@@ -48,24 +47,7 @@
 		</div>
 		
 		<div id="content-wrapper">
-			<div class="col span-6">
-				<div class="section">
-					<h3>Stories by person</h3>
-					
-					<div class="tags">
-						<p><a href="browse-by-person.html" class="small">rodrigogalindez</a> <a href="browse-by-person.html" class="large">pablius</a> <a href="browse-by-person.html" class="x-small">gonzalocasas</a> <a href="browse-by-person.html" class="medium">melocotoncita</a> <a href="browse-by-person.html" class="large">lebowski</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="col last span-6">
-				<div class="section">
-					<h3>Stories by tag</h3>
-					
-					<div class="tags">
-						<p><a href="" class="small">interface</a> <a href="" class="large">design</a> <a href="" class="x-small">layout</a> <a href="" class="medium">typography</a> <a href="" class="large">color</a> <a href="" class="x-small">bug</a> <a href="" class="medium">feature</a> <a href="" class="x-small">urgent</a> <a href="" class="large">interaction</a> <a href="" class="medium">user</a> <a href="" class="x-large">ia</a> <a href="" class="large">copy</a> <a href="" class="x-small">images</a></p>
-					</div>
-				</div>
-			</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 	</div>
 </div>
