--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,7 +35,7 @@
 	
 	<div id="inner-wrapper">
 		<div id="page-header">
-			<div class="col span-8">
+			<div id="page-header-title">
 				<h2>Sprint 1: <span class="editable">Set a goal for this sprint</span></h2>
 			
 				<ul>
@@ -43,7 +43,7 @@
 				</ul>
 			</div>
 			
-			<div class="col last span-4">
+			<div id="page-header-action">
 				<table class="add-story">
 					<tr>
 						<td>
