--- a/templates/beta/index.html
+++ b/templates/beta/index.html
@@ -6,22 +6,40 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Claris &mdash; Sign up for our beta release!</title>
 	<link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="master" charset="utf-8">
+	
+	<script type="text/javascript" src="jquery-1.3.2.min.js"></script> 
+    <script type="text/javascript" src="form.js"></script> 
+
+	
+	 <script type="text/javascript"> 
+        // wait for the DOM to be loaded 
+        $(document).ready(function() { 
+			
+            $('#beta_form').ajaxForm(function() { 
+				$('#email_address').attr('value','');
+                alert("Thank you! We'll contact you as soon as the beta opens."); 
+            }); 
+        }); 
+    </script> 
+	
+	
+	
 </head>
 
 <body>
 	<div id="wrapper">
 		<h1>Claris</h1>
-		<h2>SCRUM with steroids</h2> 
+		<h2>SCRUM on steroids</h2> 
 		
 		<p>Register for an early-bird beta! Enter your e-mail:</p>
 		
-		<form action="index_submit" method="get" accept-charset="utf-8">
+		<form action="email.php" method="post" accept-charset="utf-8" id="beta_form" name="beta_form">
 			<table>
 				<th>
-					<input type="text" name="some_name" value="" id="some_name" />
+					<input type="text" name="email_address" value="" id="email_address"  />
 				</th>
 				<td>
-					<input type="image" name="some_name" value="" id="some_name" src="images/subscribe-button.gif" class="subscribe-button"/>
+					<input type="image" name="submit" value="" id="submit" src="images/subscribe-button.gif" class="subscribe-button"/>
 				</td>
 			</table>
 		</form>
