--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Templates</title>
+	<title>aa</title>
 	<link rel="stylesheet" href="css/master.css" type="text/css" media="screen" title="master" charset="utf-8">
 </head>
 
