--- a/desarrollo/perspectives/default/css/master.css
+++ b/desarrollo/perspectives/default/css/master.css
@@ -379,6 +379,23 @@ label {
 	text-shadow: 0 -1px 0 #59595E;
 }
 
+.story-status span.pending {
+	width: 5em;
+	color: #fff;	
+	background: grey url(/images/bg-faux-button.png) repeat-x left -90px;
+	border: 2px solid grey;
+	text-shadow: 0 -1px 0 #59595E;
+}
+
+.story-status span.done {
+	width: 5em;
+	color: #fff;	
+	background: blue url(/images/bg-faux-button.png) repeat-x left -90px;
+	border: 2px solid blue;
+	text-shadow: 0 -1px 0 #59595E;
+}
+
+
 .story-meta {
 	width: 5.8em;
 	overflow: hidden;
@@ -905,6 +922,10 @@ h4.medium, a.medium {
 
 h4.large, a.large {
 	font-size: 2em;
+}
+
+h5.x-large, a.x-large {
+	font-size: 2.3em;
 }
 
 .hide {
