--- a/desarrollo/perspectives/default/css/master.css
+++ b/desarrollo/perspectives/default/css/master.css
@@ -983,3 +983,19 @@ table.add-story td + td {
 table.add-story input {
 	width: 12em;
 }
+
+.notice {
+	padding: 1em;
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+}
+
+.error {
+	background: red;
+	color: #fff;
+}
+
+.ok {
+	background: green;
+	color: #fff;
+}
