New error messages

--- a/desarrollo/perspectives/default/css/master.css
+++ b/desarrollo/perspectives/default/css/master.css
@@ -985,17 +985,18 @@ table.add-story input {
 }
 
 .notice {
+	margin: 0 0 2em 0;
 	padding: 1em;
 	border-top: 1px solid #ddd;
 	border-bottom: 1px solid #ddd;
 }
 
 .error {
-	background: red;
+	background: #D6EDD7;
 	color: #fff;
 }
 
 .ok {
-	background: green;
+	background: #D6EDD7;
 	color: #fff;
 }
