Correccion de todos los objetos, esta tendria que ser la version definitiva para beta1. Casi todas las pantallas tienen la funcionalidad mínima. Falta el diseño.

--- a/desarrollo/perspectives/default/css/master.css
+++ b/desarrollo/perspectives/default/css/master.css
@@ -1001,3 +1001,10 @@ table.add-story input {
 	background: #D6EDD7;
 	color: #fff;
 }
+
+
+.story_list{
+	min-height:50px;
+	height:auto !important;
+	height:50px;
+}
