--- a/desarrollo/perspectives/default/css/master.css
+++ b/desarrollo/perspectives/default/css/master.css
@@ -18,7 +18,7 @@
 /* -------------------------------- [ General Elements ] */
 
 body {
-	font-family: Helvetica, Arial, Verdana, sans-serif;
+	font-family: Arial,Helvetica, Verdana, sans-serif;
 	font-size: 62.5%;
 /*	background: transparent url(/images/grid-960.gif) repeat-y top center;*/
 	background-color: #E6E6E6;
@@ -85,7 +85,7 @@ li p {
 
 input, textarea {
 	padding: 5px;
-	font-family: Helvetica, Arial, Verdana, sans-serif;
+	/*font-family: Helvetica, Arial, Verdana, sans-serif; */
 	border-width: 1px;
 	border-style: solid;
 	border-color: #8E8E8E #E1E1E1 #E1E1E1 #8E8E8E;
@@ -1091,7 +1091,7 @@ dl.message dd + dd + dd li a {
 }
 
 #setup-wrapper input {
-	font-family: Helvetica, Arial, Verdana, sans-serif;
+	/*font-family: Helvetica, Arial, Verdana, sans-serif; */
 	font-size: 1.8em;
 }
 
